--- a/sass/_html__forms.scss
+++ b/sass/_html__forms.scss
@@ -6,8 +6,9 @@
 ============================================================================ */
 
 $inputPadding: 5px;
-$inputHeight: 20px;
+$inputHeight: 27px;
 $formRowMargin: 0px;
+$formItemMargin: 5px;
 
 /* @group Forms generic reset
   --------------------------------------------------------------------------- */
@@ -17,7 +18,7 @@ $formRowMargin: 0px;
 	margin: 0;
 	// IE7
 
-	//button,
+	button,
 	input,
 	select,
 	textarea {
@@ -32,18 +33,14 @@ $formRowMargin: 0px;
 		//&[type="image"],
 		&[type="submit"],
 		&[type="reset"] {
-			-webkit-appearance: button;
-			//Corrects inability to style clickable 'input' types in iOS
+			-webkit-appearance: button; //Corrects inability to style clickable 'input' types in iOS
 		}
 
 		&[type="checkbox"],
 		&[type="radio"] {
-			box-sizing: border-box;
-			// Addresses box sizing set to `content-box` in IE 8/9.
-			padding: 0;
-			// Removes excess padding in IE 8/9.
-			width: auto !important;
-			// form__item_w* normilize
+			box-sizing: border-box; // Addresses box sizing set to `content-box` in IE 8/9.
+			padding: 0; // Removes excess padding in IE 8/9.
+			width: auto !important; // form__item_w* normilize
 		}
 
 		&[type="radio"] {
@@ -64,7 +61,7 @@ $formRowMargin: 0px;
 
 .form {
 
-	//button,
+	button,
 	input,
 	select,
 	textarea {
@@ -81,38 +78,24 @@ $formRowMargin: 0px;
 	input[type="text"],
 	select,
 	textarea {
-		border: 1px solid;
-		border-color: #777 #ccc #ccc;
-		background: #fff;
 		padding: 0 $inputPadding;
 		margin: 0;
 		height: $inputHeight;
 		line-height: $inputHeight;
+		max-width: 100%;
+		background: linear-gradient(to bottom, #f2f2f2, #fdfdfd);
+		border: 1px solid rgba(0,0,0,.25);
+		border-radius: 3px;
+		box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.15), 0px 1px 0 0 rgba(255,255,255,0.89);
 
 		&:hover {
-			border-color: darken(#ccc, 10%);
+			border-color: rgba(0,0,0,.35);
 		}
 
 		&:focus {
-			border-color: $lnColor;
 			outline: none;
-		}
-	}
-
-	//input[type="button"],
-	//button,
-	input[type="submit"] {
-		color: #efefef;
-		background: #2d2d2d;
-		border: 1px solid #2d2d2d;
-
-		&:hover,
-		&:focus {
-			border-color: $lnColor;
-		}
-
-		&:active {
-			background-color: lighten(#2d2d2d, 20%);
+			border-color: #729fcf;
+			box-shadow: 0 1px 0 rgba(255,255,255,0.6), inset 0 1px 2px 0 rgba(0,106,221,0.3);
 		}
 	}
 
@@ -122,12 +105,9 @@ $formRowMargin: 0px;
 	// }
 
 	textarea {
-		overflow: auto;
-		//Removes default vertical scrollbar in IE6/7/8/9
-		vertical-align: top;
-		//Improves readability and alignment in all browsers
-		height: auto;
-		// overwrite theming on form element
+		overflow: auto; //Removes default vertical scrollbar in IE6/7/8/9
+		vertical-align: top; //Improves readability and alignment in all browsers
+		height: auto; // overwrite theming on form element
 		min-height: 4em;
 		line-height: $base-line-height;
 		padding: 5px $inputPadding;
@@ -136,8 +116,7 @@ $formRowMargin: 0px;
 
 	select {
 		&[multiple="multiple"] {
-			height: auto;
-			// overwrite theming on form element
+			height: auto; // overwrite theming on form element
 		}
 	}
 
@@ -157,22 +136,18 @@ $formRowMargin: 0px;
 	}
 
 	legend {
-		border: none;
-		// Corrects color not being inherited in IE 8/9.
-		padding: 0;
-		// Remove padding so people aren't caught out if they zero out fieldsets.
+		border: none; // Corrects color not being inherited in IE 8/9.
+		padding: 0; // Remove padding so people aren't caught out if they zero out fieldsets.
 	}
 
 	// generic
 
-	.form__set {
-		// fieldset
+	.form__set { // fieldset
 		position: relative;
 		padding: 20px 0 0;
 	}
 
-	.form__set__legend {
-		// legend
+	.form__set__legend { // legend
 		border: 0;
 		font-size: $h3-font-size;
 		font-weight: bold;
@@ -180,7 +155,7 @@ $formRowMargin: 0px;
 		span {
 			position: absolute;
 			top: 0;
-			left: $formRowMargin;
+			left: 0;
 		}
 	}
 
@@ -196,8 +171,7 @@ $formRowMargin: 0px;
 	button,
 	input {
 		&::-moz-focus-inner {
-			border: none;
-			// Removes inner padding and border in FF3+ www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
+			border: none; // Removes inner padding and border in FF3+ www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
 			padding: 0;
 		}
 	}
@@ -212,8 +186,7 @@ $formRowMargin: 0px;
 
 		button,
 		input {
-			overflow: visible;
-			//Removes inner spacing in IE7 without affecting normal text inputs
+			overflow: visible; //Removes inner spacing in IE7 without affecting normal text inputs
 		}
 	}
 
@@ -261,7 +234,6 @@ $formRowMargin: 0px;
 
 /* @group Form Elements
   --------------------------------------------------------------------------- */
-$formItemPadding: 0px;
 
 .form__row {
 	@extend .i-clfx;
@@ -271,14 +243,13 @@ $formItemPadding: 0px;
 
 .form__item {
 	float: left;
-	padding: 0 $formItemPadding 0 0;
-	margin-left: 5px;
+	margin: 0 $formItemMargin 0 0;
 }
 
-@each $itemWidth in 50, 100, 145, 200 {
+@each $itemWidth in 50, 100, 140, 200 {
 
 	.form__item_w-#{$itemWidth} {
-		width: $itemWidth - ($formItemPadding);
+		width: $itemWidth + $formItemMargin;
 
 		input,
 		textarea {
@@ -289,30 +260,6 @@ $formItemPadding: 0px;
 
 .form__row_submit {
 
-}
-
-/* @end */
-
-/* @group Form Themed
-  --------------------------------------------------------------------------- */
-
-.form {
-
-	//mods
-	.form__set_main {
-		padding-top: 20px;
-	}
-
-	.form__set__legend_main {
-		font-size: $h2-font-size;
-		font-weight: bold;
-	}
-}
-
-.form_name2 {
-	.form__set__legend span {
-		left: 14px;
-	}
 }
 
 /* @end */
