--- a/sass/_weiss__mixins.scss
+++ b/sass/_weiss__mixins.scss
@@ -4,7 +4,7 @@
 
 // Hide only visually, but have it available for screenreaders
 @mixin i-hide_vis {
-	border: 0;
+	border: none;
 	clip: rect(1px, 1px, 1px, 1px);
 	height: 1px;
 	margin: -1px;
