--- a/source/css/_parts__main.scss
+++ b/source/css/_parts__main.scss
@@ -5,6 +5,43 @@
 		Main
 ============================================================================= */
 
+/* @group Global sprite
+  --------------------------------------------------------------------------- */
+
+
+//$icons-map: sprite-map("icons/*.png", $spacing: 20px, $layout: vertical);
+//
+//.i-ico {
+//	background: $icons-map;
+//	display: inline-block;
+//	vertical-align: top;
+//
+//	.ie6-7 & {
+//		display: inline;
+//		zoom: 1;
+//	}
+//}
+//
+//@each $ico-name in
+//	search,
+//	tel
+//{
+//	.i-ico_#{$ico-name} {
+//		@include sprite($icons-map, ico-#{$ico-name}, true);
+//	}
+//}
+
+//.i-ico_dimensions {
+//	@include sprite($icons-map, ico-file-doc, true);
+//}
+//
+//.i-ico_position {
+//	//background-position: sprite-position($icons-map, ico-file-doc-hover);
+//	background-position: sprite-position($icons-map, ico-file-doc-hover, 3px, -2px);
+//}
+
+/* @end */
+
 /* @group breadcrumb
   --------------------------------------------------------------------------- */
 
