--- a/source/css/_html__typography__basic.scss
+++ b/source/css/_html__typography__basic.scss
@@ -15,6 +15,42 @@ h6, .h6 {
 	font-weight: bold;
 }
 
+//h1, .h1 {
+//	font-size: $h1-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+//
+//h2, .h2 {
+//	font-size: $h2-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+//
+//h3, .h3 {
+//	font-size: $h3-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+//
+//h4, .h4 {
+//	font-size: $h4-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+//
+//h5, .h5 {
+//	font-size: $h5-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+//
+//h6, .h6 {
+//	font-size: $h6-font-size;
+//	line-height: 1.2;
+//	margin-bottom: 10px;
+//}
+
 h1, .h1 {
 	@include adjust-font-size-to($h1-font-size);
 	@include trailer(1, $h1-font-size);
