--- a/source/css/_includes__b.scss
+++ b/source/css/_includes__b.scss
@@ -16,9 +16,9 @@
 	outline: 1px dashed #ccc;
 }
 
-/* ============================================================================
-		Stylize text
-============================================================================= */
+///* ============================================================================
+//		Stylize text
+//============================================================================= */
 
 //.i-emph {
 //
