--- a/source/css/_parts__main.scss
+++ b/source/css/_parts__main.scss
@@ -42,7 +42,7 @@
 
 /* @end */
 
-/* @group breadcrumb
+/* @group breadcrumb block
   --------------------------------------------------------------------------- */
 
 .breadcrumb {}
