--- a/source/css/_html__tables.scss
+++ b/source/css/_html__tables.scss
@@ -9,10 +9,8 @@
   --------------------------------------------------------------------------- */
 
 .table {
-	border-collapse: collapse;
-	//Remove most spacing between table cells.
-	border-spacing: 0;
-	//Remove most spacing between table cells.
+	border-collapse: collapse;	//Remove most spacing between table cells.
+	border-spacing: 0;	//Remove most spacing between table cells.
 	border-width: 0;
 	width: 100%;
 	empty-cells: hide;
@@ -27,7 +25,6 @@
 		vertical-align: middle;
 		padding: 0 rhythm(0.4);
 		border: 1px solid #ccc;
-
 	}
 
 	thead {
@@ -35,35 +32,6 @@
 		th {
 			font-weight: bold;
 		}
-	}
-
-	tbody {
-
-		td {
-			//&[colspan] {
-			//	text-align:center;
-			//}
-			//
-			//&[rowspan] {
-			//	vertical-align:middle;
-			//}
-			//
-			//&[colspan="1"] {
-			//	text-align: left;
-			//}
-			//
-			//&[rowspan="1"] {
-			//	vertical-align: top;
-			//}
-			//
-			//&:empty {
-			//	border: none;
-			//}
-		}
-
-		//tr:nth-of-type(odd) td {
-		//	background-color: rgba(0,0,0,0.05);
-		//}
 	}
 
 	tfoot {
