--- a/source/css/_html__typography__fonts.scss
+++ b/source/css/_html__typography__fonts.scss
@@ -8,7 +8,9 @@
 @font-face {
 	font-family: 'ALSRublRegular';
 	src: url('../fonts/ASLRubl/rouble-webfont.eot');
-	src: url('../fonts/ASLRubl/rouble-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/ASLRubl/rouble-webfont.woff') format('woff'), url('../fonts/ASLRubl/rouble-webfont.ttf') format('truetype');
+	src: url('../fonts/ASLRubl/rouble-webfont.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/ASLRubl/rouble-webfont.woff') format('woff'),
+	url('../fonts/ASLRubl/rouble-webfont.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
