--- a/source/css/_plugins__jstyling.scss
+++ b/source/css/_plugins__jstyling.scss
@@ -1,18 +1,40 @@
+@import "weiss__config";
+@import "weiss__mixins";
+
 /**
- * Customize at your own risk
+ *  Select
  */
+
+/* Select wrapper */
 
 .jstyling-select {
 	margin: 0;
 	padding: 0;
 	position: relative;
 	z-index: 0;
+
+	width: 240px;
+	border: 1px solid #000;
+	cursor: pointer;
+}
+
+/* Select current option */
+
+.jstyling-select-s {
+	padding: 2px;
+	height: 22px;
+	line-height: 22px;
+	background: url(../images/plugins/jstyling/jcusel-select.png) no-repeat top right;
 }
 
 .jstyling-select-t {
 	white-space: nowrap;
 	overflow: hidden;
+
+	width: 202px;
 }
+
+/* Select options list*/
 
 .jstyling-select-l {
 	margin: 0;
@@ -23,20 +45,49 @@
 	overflow-y: auto;
 	z-index: 1000;
 
+	max-height: 124px;
+	background: #fff;
+	border: 1px solid #000;
+	border-top: 0;
+	top: 27px;
+	left: -1px;
+
 	div {
 		list-style: none;
 		display: block;
 		white-space: nowrap;
 		overflow: hidden;
 
+		height: 20px;
+		border-top: 1px dotted #ccc;
+		padding: 2px;
+
 		&:hover {
+			background: #eee;
 		}
 
 		&.disabled {
+			background: #e5e5e5;
 		}
 
 		&.disabled:hover {
+			color: #000;
 		}
+
+		&:first-child {
+			border-top: 0
+		}
+	}
+
+}
+
+.jstyling-select {
+	&.active {
+		background-position: 100% -28px;
+	}
+
+	&.disabled {
+		background-color: #e5e5e5;
 	}
 }
 
@@ -47,6 +98,10 @@
 		display: block;
 	}
 }
+
+/*
+ * Checkbox
+ */
 
 .jstyling-checkbox,
 .jstyling-radio {
@@ -63,114 +118,10 @@
 	input[type=checkbox],
 	input[type=radio] {
 		opacity: 0;
-		filter: alpha(opacity = 0);
+		filter: alpha(opacity=0);
 		z-index: 0;
 	}
 }
-
-.jstyling-file {
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	position: relative;
-
-	.ie6-7 & {
-		display: inline;
-		zoom: 1;
-	}
-
-	input[type=file] {
-		margin: 0;
-		padding: 0;
-		opacity: 0;
-		filter: alpha(opacity = 0);
-		z-index: 1;
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
-}
-
-.jstyling-file-f {
-	overflow: hidden;
-	white-space: nowrap;
-}
-
-.jstyling-file-b {
-	position: relative;
-	overflow: hidden
-}
-
-/**
- * This you can customize
- */
-
-/* Select wrapper */
-
-.jstyling-select {
-	width: 240px;
-	border: 1px solid #000000;
-	cursor: pointer;
-}
-
-/* Select current option */
-
-.jstyling-select-s {
-	padding: 2px;
-	height: 22px;
-	line-height: 22px;
-	background: url(../images/plugins/jstyling/jcusel-select.png) no-repeat top right;
-}
-
-.jstyling-select-t {
-	width: 202px;
-}
-
-/* Select options list*/
-
-.jstyling-select-l {
-	max-height: 124px;
-	background: #FFFFFF;
-	border: 1px solid #000000;
-	border-top: 0;
-	top: 27px;
-	left: -1px;
-
-	div {
-		height: 20px;
-		border-top: 1px dotted #cccccc;
-		padding: 2px;
-
-		&:hover {
-			background: #eeeeee;
-		}
-
-		&.disabled {
-			background: #E5E5E5;
-		}
-
-		&.disabled:hover {
-			color: #000000;
-		}
-
-		&:first-child {
-			border-top: 0
-		}
-	}
-
-}
-
-.jstyling-select {
-	&.active {
-		background-position: 100% -28px;
-	}
-
-	&.disabled {
-		background-color: #E5E5E5;
-	}
-}
-
-/* Checkbox */
 
 .jstyling-checkbox {
 	width: 16px;
@@ -191,7 +142,9 @@
 	}
 }
 
-/* Radio button */
+/*
+ * Radio button
+ */
 
 .jstyling-radio {
 	width: 16px;
@@ -213,7 +166,42 @@
 	}
 }
 
-/* File input */
+/*
+ * File input
+ */
+
+.jstyling-file {
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	position: relative;
+
+	.ie6-7 & {
+		display: inline;
+		zoom: 1;
+	}
+
+	input[type=file] {
+		margin: 0;
+		padding: 0;
+		opacity: 0;
+		filter: alpha(opacity=0);
+		z-index: 1;
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+}
+
+.jstyling-file-f {
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.jstyling-file-b {
+	position: relative;
+	overflow: hidden
+}
 
 .jstyling-file-f {
 	padding: 2px 2px;
