--- a/source/partials/_region__footer.erb
+++ b/source/partials/_region__footer.erb
@@ -1,19 +1,21 @@
 <div class="region-footer l-global-footer">
 	<footer role="contentinfo">
 		<div class="l-global-footer__inner">
-			<div class="l-global-footer__left">
-				<p class="copy">
-					Weiss <br />
-					&copy; 2013 blank canvas sass-css helper. ver 2.0
-				</p>
-			</div>
-			<div class="l-global-footer__right">
-				<p class="develop-block">
-					Development
-					<a href="#" class="develop-block__logo">
-						<img src="images/bg-transparent.gif" alt="Интерактивное агенство Uplab" />
-					</a>
-				</p>
+			<div class="l-row">
+				<div class="l-span l-span_6">
+					<p>
+						Weiss <br />
+						&copy; 2013 blank canvas sass-css helper. ver 3.0
+					</p>
+				</div>
+				<div class="l-row l-span_6 l-span_last">
+					<p class="develop-block">
+						Development
+						<a href="#" class="develop-block__logo">
+							<img src="images/bg-transparent.gif" alt="Интерактивное агенство Uplab" />
+						</a>
+					</p>
+				</div>
 			</div>
 		</div>
 	</footer>
