--- a/source/partials/_region__header.erb
+++ b/source/partials/_region__header.erb
@@ -1,17 +1,15 @@
 <div class="region-header l-global-header">
 	<header role="banner">
-		<div class="i-clfx">
-			<div class="l-global-header__left">
-				<hgroup>
-					<h1 class="site-name">Sitename</h1>
-					<h2 class="site-slogan">Site slogan</h2>
-				</hgroup>
+		<div class="l-row">
+			<div class="l-span l-span_6">
+				<h1 class="site-name">Sitename</h1>
+				<h2 class="site-slogan">Site slogan</h2>
 				<!-- <a href="#">
 					<span class="site-name">Sitename</span>
 					<span class="site-slogan">Site slogan</span>
 				</a> -->
 			</div>
-			<div class="l-global-header__right">
+			<div class="l-span l-span_6 l-span_last">
 				<a href="mailto:weiss@mail.com">weiss@mail.com</a>
 			</div>
 		</div>
