--- a/source/css/_parts__footer.scss
+++ b/source/css/_parts__footer.scss
@@ -11,7 +11,7 @@
   --------------------------------------------------------------------------- */
 
 .develop-block {
-
+	float: right;
 }
 
 .develop-block__logo {
